# nrf-keyboard

./: Cargo.toml  memory.x  readme.md  rustc-ice-2023-11-13T05_42_08-48760.txt
.cargo/: config.toml
src/: debouncer.rs  gpio.rs  kvstore.rs  main.rs  softdevice.rs
src/ble/: bonder.rs  gatt.rs  mod.rs  softdevice.rs
