[package]
name = "nrf-keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
embassy-executor = { version = "0.3.2", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "nightly",
    "defmt",
    "integrated-timers",
] }
embassy-nrf = { version = "0.1", features = [
    "nightly",
    "defmt",
    "nrf52840",
    "gpiote",
    "time-driver-rtc1",
] }
embassy-time = { version = "0.1", features = [
    "nightly",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.1", features = ["defmt"] }
embassy-sync = { version = "0.3" }
ekv = { version = "*", features = [
    "crc",
    "page-size-4096",
    "align-4",
    "max-page-count-16384",
    "defmt",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
nrf-softdevice = { version = "0.1.0", features = [
    "nightly",
    "defmt",
    "ble-sec",
    "nrf52840",
    "s140",
    "ble-peripheral",
    "critical-section-impl",
    "ble-gatt-server",
] }
nrf-softdevice-s140 = { version = "*" }
embedded-alloc = "0.5.1"
rand_core = "0.6.4"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
postcard = { version = "1.0.8", features = ["use-defmt"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
static_cell = "2.0.0"
tinyvec = { version = "1.6.0", features = ["serde"] }
futures = { version = "0.3.5", default-features = false }
usbd-human-interface-device = "0.4.4"
packed_struct ={version =  "0.10.1",default-features = false}



[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "3477cc6bbd45c66f36af18f72607f54c059ee3ca" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "584fc35" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "584fc35" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "584fc35" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "584fc35" }
nrf-softdevice = {  git = "https://github.com/embassy-rs/nrf-softdevice" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" }
ekv = { git = "https://github.com/embassy-rs/ekv", rev = "d24ac27" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false
